--- a/articles/cognitive-services/Speech/toc.yml
+++ b/articles/cognitive-services/Speech/toc.yml
@@ -1,30 +1,33 @@
-- name: "Bing Speech Documentation"
+- name: Dokumentation om Bing-tal
   href: ../index.md
-- name: "Overview"
+- name: Översikt
   href: Home.md
-- name: "Get started"
+- name: Kom igång
   items:
-  - name: "C#(REST API)  "
+  - name: "C# (REST-API)\_\_"
     href: GetStarted/GetStartedREST.md
-  - name: "JavaScript(Websocket API)   " 
+  - name: cURL (REST API)
+    href: GetStarted/GetStarted-cURL.md
+  - name: "JavaScript (Websocket-API)\_\_\_"
+ 
     href: GetStarted/GetStartedJSWebsockets.md
-  - name: "C#(Client Library)"
+  - name: 'C# (klientbibliotek)'
     href: GetStarted/GetStartedCSharpDesktop.md
-  - name: "C#(Service Library)"
+  - name: 'C# (tjänstbibliotek)'
     href: GetStarted/GetStartedCSharpServiceLibrary.md
-  - name: "Objective C on iOS(Client Library)   "
+  - name: "Mål-C på iOS (klientbibliotek)\_\_\_"
     href: GetStarted/Get-Started-ObjectiveC-iOS.md
-  - name: "Java on Android(Client Library)"
+  - name: Java på Android (klientbibliotek)
     href: GetStarted/GetStartedJavaAndroid.md
-- name: "Reference"
+- name: Referens
   items: 
-  - name: "Speech recognition API reference"
+  - name: Referens för taligenkännings-API
     href: API-Reference-REST/BingVoiceRecognition.md
-  - name: "Text-to-speech API reference"
+  - name: Referens för text till tal-API
     href: API-Reference-REST/BingVoiceOutput.md
-  - name: "Websocket Protocol"
+  - name: Websocket-protokoll
     href: API-Reference-REST/websocketprotocol.md
-  - name: "SDKs & Samples"
+  - name: 'SDK: er och exempel'
     items:
-    - name: "JavaScript"
+    - name: JavaScript
       href: https://github.com/Azure-Samples/SpeechToText-WebSockets-Javascript
