--- a/articles/virtual-machines/windows/toc.yml
+++ b/articles/virtual-machines/windows/toc.yml
@@ -55,7 +55,8 @@
     href: network-overview.md
   - name: Skalningsuppsättning för virtuella datorer
     href: ../../virtual-machine-scale-sets/virtual-machine-scale-sets-overview.md?toc=%2fazure%2fvirtual-machines%2fwindows%2ftoc.json
-  - name: Instans av metadatatjänst 
+  - name: Instans av metadatatjänst
+ 
     href: ../virtual-machines-instancemetadataservice-overview.md
   - name: Behållare
     href: containers.md
@@ -370,6 +371,9 @@
         href: troubleshoot-specific-rdp-errors.md
     - name: Återställ RDP-lösenord
       href: reset-rdp.md
+    - name: Startdiagnostik
+ 
+      href: boot-diagnostics.md
     - name: Skapa en virtuell dator
       href: troubleshoot-deployment-new-vm.md
     - name: Starta om eller ändra storlek på en virtuell dator
@@ -380,6 +384,8 @@
       href: allocation-failure.md
     - name: Distribuera om en VM
       href: redeploy-to-new-node.md
+    - name: Vanliga felmeddelanden
+      href: error-messages.md
     - name: Anslut en virtuell hårddisk till felsöknings-VM
       items:
       - name: Azure PowerShell
