--- a/articles/cosmos-db/index.yml
+++ b/articles/cosmos-db/index.yml
@@ -1,9 +1,10 @@
 ### YamlMime:YamlDocument
 documentType: LandingData
-title: "Dokumentation om Azure Cosmos DB"
+title: Dokumentation om Azure Cosmos DB
 metadata:
-  title: "Dokumentation om Azure Cosmos DB – självstudier, API-referens"
-  description: "Lär dig att använda Azure Cosmos DB för att skapa globalt distribuerade databaser för flera datamodeller. I självstudierna lär du dig att bygga upp databaser för datamodeller av typen frågedokument, nyckel/värde och graf."
+  document_id: e77bd640-1036-8b31-955c-a2cc990c69a1
+  title: 'Dokumentation om Azure Cosmos DB – självstudier, API-referens'
+  description: 'Lär dig att använda Azure Cosmos DB för att skapa globalt distribuerade databaser för flera datamodeller. I självstudierna lär du dig att bygga upp databaser för datamodeller av typen frågedokument, nyckel/värde och graf.'
   services: cosmos-db
   author: carolz
   manager: carolz
@@ -14,9 +15,9 @@ metadata:
   ms.date: 04/28/2017
   ms.author: carolz
 abstract:
-  description: "Azure Cosmos DB är en globalt distribuerad databastjänst för elastisk och oberoende skalning av dataflöde och lagring i valfritt antal geografiska regioner med ett omfattande serviceavtal.  Du kan utveckla dokument-, nyckel/värde- eller grafdatabaser med Cosmos DB och en rad populära API:er och programmeringsmodeller. Lär dig hur du använder Cosmos DB med våra snabbstarter, självstudier och exempel."
+  description: 'Azure Cosmos DB är en globalt distribuerad databastjänst för elastisk och oberoende skalning av dataflöde och lagring i valfritt antal geografiska regioner med ett omfattande serviceavtal.  Du kan utveckla dokument-, nyckel/värde- eller grafdatabaser med Cosmos DB och en rad populära API:er och programmeringsmodeller. Lär dig hur du använder Cosmos DB med våra snabbstarter, självstudier och exempel.'
 sections:
-- title: "Snabbstarter på 5 minuter"
+- title: Snabbstarter på 5 minuter
   items:
   - type: paragraph
     text: 'Learn how to use Azure Cosmos DB to create a globally distributed database using one of the multi-model APIs:'
@@ -34,35 +35,35 @@ sections:
       - image:
           src: media/index/logo_gremlin.svg
     rows:
-      - title: "DocumentDB-API"
+      - title: DocumentDB-API
         values:
         - href: /azure/cosmos-db/create-documentdb-dotnet
         - href: /azure/cosmos-db/create-documentdb-java
         - href: /azure/cosmos-db/create-documentdb-nodejs
         - href: /azure/cosmos-db/create-documentdb-python
         - href:
-      - title: "MongoDB-API"
+      - title: MongoDB-API
         values:
           - href: /azure/cosmos-db/create-mongodb-dotnet
           - href: /azure/cosmos-db/create-mongodb-java
           - href: /azure/cosmos-db/create-mongodb-nodejs
           - href: 
           - href: 
-      - title: "Graph API"
+      - title: Graph API
         values:
           - href: /azure/cosmos-db/create-graph-dotnet
           - href: /azure/cosmos-db/create-graph-java
           - href: /azure/cosmos-db/create-graph-nodejs
           - href:
           - href: /azure/cosmos-db/create-graph-gremlin-console
-      - title: "Tabell-API"
+      - title: Tabell-API
         values:
           - href: /azure/cosmos-db/create-table-dotnet
           - href:
           - href:
           - href:
           - href:
-- title: "Steg för steg-självstudier"
+- title: Steg för steg-självstudier
   items:
   - type: paragraph
     text: Learn how to develop apps using Azure Cosmos DB&#58;
@@ -70,11 +71,11 @@ sections:
     style: ordered
     items:
     - html: Develop an app with Cosmos DB&#58; <a href="/azure/cosmos-db/tutorial-develop-documentdb-dotnet">DocumentDB</a> | <a href="/azure/cosmos-db/tutorial-develop-mongodb">MongoDB</a> | <a href="/azure/cosmos-db/tutorial-develop-table-dotnet">Table</a> | <a href="/azure/cosmos-db/tutorial-develop-graph-dotnet">Graph</a>
-    - html: Import data into Cosmos DB&#58; <a href="../documentdb/documentdb-import-data">DocumentDB</a> | <a href="../documentdb/documentdb-mongodb-migrate">MongoDB</a>
+    - html: Import data into Cosmos DB&#58; <a href="documentdb-import-data">DocumentDB</a> | <a href="documentdb-mongodb-migrate">MongoDB</a>
     - html: Query data with Cosmos DB&#58; <a href="/azure/cosmos-db/tutorial-query-documentdb">DocumentDB</a> | <a href="/azure/cosmos-db/tutorial-query-mongodb">MongoDB</a> | <a href="/azure/cosmos-db/tutorial-query-table">Table</a> | <a href="/azure/cosmos-db/tutorial-query-graph">Graph</a>
     - html: Global database replication with Cosmos DB&#58; <a href="/azure/cosmos-db/tutorial-global-distribution-documentdb">DocumentDB</a> | <a href="/azure/cosmos-db/tutorial-global-distribution-mongodb">MongoDB</a> | <a href="/azure/cosmos-db/tutorial-global-distribution-table">Table</a> | <a href="/azure/cosmos-db/tutorial-global-distribution-graph">Graph</a>
-    - html: <a href="../documentdb/documentdb-nosql-local-emulator">Develop your application locally using the emulator</a>
-- title: "Exempel"
+    - html: <a href="local-emulator">Develop your application locally using the emulator</a>
+- title: Exempel
   items:
   - type: list
     style: unordered
@@ -82,17 +83,17 @@ sections:
     items:
     - html: <a href="/azure/cosmos-db/cli-samples">Azure CLI</a>
     - html: <a href="/azure/cosmos-db/powershell-samples">Azure PowerShell</a>
-- title: "Referens"
+- title: Referens
   items:
   - type: list
     style: cards
     className: cardsD
     items:
-    - title: "DocumentDB-API:er"
+    - title: 'DocumentDB-API:er'
       html: <p><a href="/rest/api/documentdb/">REST</a></p><p><a href="https://aka.ms/acdbnetref">.NET</a></p><p><a href="https://aka.ms/acdbnetcoreref">.NET Core</a></p><p><a href="https://aka.ms/acdbnoderef">Node.js</a></p><p><a href="https://aka.ms/acdbjavaref">Java</a></p><p><a href="https://aka.ms/acdbpythonref">Python</a></p><p><a href="https://aka.ms/acdbsqlref">SQL</a></p>
-    - title: "MongoDB-API:er"
+    - title: 'MongoDB-API:er'
       html: <p><a href="https://docs.mongodb.com/manual/reference/mongodb-wire-protocol/">Wire Protocol</a></p><p><a href="https://mongodb.github.io/node-mongodb-native/ ">Node.js</a></p><p><a href="https://docs.mongodb.com/ecosystem/drivers/csharp/">C#</a></p><p><a href="https://docs.mongodb.com/ecosystem/drivers/java/">Java</a></p><p><a href="https://docs.mongodb.com/ecosystem/drivers/python/">Python</a></p><p><a href="https://docs.mongodb.com/ruby-driver/master/">Ruby</a></p>
-    - title: "Tabell-API:er"
+    - title: 'Tabell-API:er'
       html: <p><a href="/rest/api/storageservices/fileservices/Table-Service-Concepts">REST</a></p><p><a href="/azure/cosmos-db/table-sdk-dotnet">.NET</a></p>
-    - title: "Gremlin-API:er"
+    - title: 'Gremlin-API:er'
       html: <p><a href="http://tinkerpop.apache.org/docs/current/reference/">Gremlin</a></p><p><a href="/azure/cosmos-db/graph-sdk-dotnet">.NET</a></p><p><a href="https://github.com/ZEROFAIL/goblin">Python</a></p><p><a href="http://tinkerpop.apache.org/docs/current/reference/#connecting-via-java">Java</a></p><p><a href="https://github.com/jbmusso/gremlin-javascript">JavaScript</a></p>
