--- a/articles/postgresql/TOC.yml
+++ b/articles/postgresql/TOC.yml
@@ -11,10 +11,12 @@
     href: quickstart-create-server-database-portal.md
   - name: Skapa DB – Azure CLI
     href: quickstart-create-server-database-azure-cli.md
-- name: Exempelskript
-  items:
-  - name: Azure CLI
-    href: sample-scripts-azure-cli.md
+  - name: Anslut
+    items:
+    - name: Node.js
+      href: connect-nodejs.md
+    - name: Python
+      href: connect-python.md
 - name: Självstudier
   items:
   - name: 1 – Utforma en databas
@@ -55,6 +57,10 @@
     items:
     - name: Anslutningsbibliotek
       href: concepts-connection-libraries.md
+- name: Exempel
+  items:
+  - name: Azure CLI
+    href: sample-scripts-azure-cli.md
 - name: Instruktionsguider
   items:
   - name: Brandväggsregler
