--- a/articles/cosmos-db/TOC.yml
+++ b/articles/cosmos-db/TOC.yml
@@ -60,9 +60,9 @@
   - name: 2 – Importera
     items:
     - name: DocumentDB
-      href: ../documentdb/documentdb-import-data.md
+      href: import-data.md
     - name: MongoDB
-      href: ../documentdb/documentdb-mongodb-migrate.md
+      href: mongodb-migrate.md
   - name: 3 – Fråga
     items:
     - name: DocumentDB
@@ -86,9 +86,9 @@
   - name: 5 – Utveckla lokalt
     items:
     - name: Använd emulatorn
-      href: ../documentdb/documentdb-nosql-local-emulator.md
+      href: local-emulator.md
     - name: Exportera certifikat
-      href: ../documentdb/documentdb-nosql-local-emulator-export-ssl-certificates.md
+      href: local-emulator-export-ssl-certificates.md
 - name: Exempel
   items:
   - name: Azure CLI 2.0
@@ -98,32 +98,35 @@
 - name: Koncept
   items:
   - name: Global distribution
-    href: ../documentdb/documentdb-distribute-data-globally.md
+    href: distribute-data-globally.md
   - name: Partitionering
     href: partition-data.md
   - name: Konsekvens
-    href: ../documentdb/documentdb-consistency-levels.md
+    href: consistency-levels.md
   - name: Dataflöde
-    href: ../documentdb/documentdb-request-units.md
+    href: request-units.md
     items:
     - name: Enheter för programbegäran per minut
       href: request-units-per-minute.md
   - name: 'API:er för flera modeller'
     items:
     - name: DocumentDB
-      href: ../documentdb/documentdb-introduction.md
+      href: documentdb-introduction.md
     - name: MongoDB
-      href: ../documentdb/documentdb-protocol-mongodb.md
+      href: mongodb-introduction.md
     - name: Tabell
       href: table-introduction.md
     - name: Graph
       href: graph-introduction.md
   - name: Säkerhet
-    href: ../documentdb/documentdb-nosql-database-security.md
+    href: database-security.md
   - name: TCO
     href: https://aka.ms/documentdb-tco-paper
   - name: Användningsfall
-    href: ../documentdb/documentdb-use-cases.md
+    href: use-cases.md
+    items:
+      - name: Appar för sociala medier
+        href: social-media-apps.md
 - name: Instruktionsguider
   items:
   - name: Utveckla
@@ -131,87 +134,90 @@
     - name: DocumentDB-API
       items:
       - name: Resurser
-        href: ../documentdb/documentdb-resources.md
+        href: documentdb-resources.md
       - name: SQL-fråga
-        href: ../documentdb/documentdb-sql-query.md
+        href: documentdb-sql-query.md
       - name: SQL-spelplan
         href: https://www.documentdb.com/sql/demo
       - name: Partitionering
-        href: ../documentdb/documentdb-partition-data.md
+        href: documentdb-partition-data.md
       - name: 'Lagrade procedurer, utlösare och UDF:er'
-        href: ../documentdb/documentdb-programming.md
+        href: programming.md
       - name: Prestandatestning
-        href: ../documentdb/documentdb-performance-testing.md
+        href: performance-testing.md
       - name: Prestandatips
-        href: ../documentdb/documentdb-performance-tips.md
+        href: performance-tips.md
       - name: Konfiguration med flera huvudservrar
-        href: ../documentdb/documentdb-multi-region-writers.md
+        href: multi-region-writers.md
       - name: DateTimes
-        href: ../documentdb/documentdb-working-with-dates.md
+        href: working-with-dates.md
+      - name: Modelleringsdokumentdata
+ 
+        href: modeling-data.md 
       - name: Självstudier
         items:
         - name: Skriv din första app
           items:
           - name: .NET
-            href: ../documentdb/documentdb-get-started.md
+            href: documentdb-get-started.md
           - name: .NET Core
-            href: ../documentdb/documentdb-dotnetcore-get-started.md
+            href: documentdb-dotnetcore-get-started.md
           - name: Java
-            href: ../documentdb/documentdb-java-get-started.md
+            href: documentdb-java-get-started.md
           - name: Node.js
-            href: ../documentdb/documentdb-nodejs-get-started.md
+            href: documentdb-nodejs-get-started.md
           - name: C++
-            href: ../documentdb/documentdb-cpp-get-started.md
+            href: documentdb-cpp-get-started.md
         - name: Bygga en webbapp
           items:
           - name: .NET
-            href: ../documentdb/documentdb-dotnet-application.md
+            href: documentdb-dotnet-application.md
           - name: Xamarin
-            href: ../documentdb/documentdb-mobile-apps-with-xamarin.md
+            href: mobile-apps-with-xamarin.md
           - name: Node.js
-            href: ../documentdb/documentdb-nodejs-application.md
+            href: documentdb-nodejs-application.md
           - name: Java
-            href: ../documentdb/documentdb-java-application.md
+            href: documentdb-java-application.md
           - name: Python Flask
-            href: ../documentdb/documentdb-python-application.md
+            href: documentdb-python-application.md
       - name: Exempel
         items:
         - name: .NET-exempel
-          href: ../documentdb/documentdb-dotnet-samples.md
+          href: documentdb-dotnet-samples.md
         - name: Node.js-exempel
-          href: ../documentdb/documentdb-nodejs-samples.md
+          href: documentdb-nodejs-samples.md
         - name: Python-exempel
-          href: ../documentdb/documentdb-python-samples.md
+          href: documentdb-python-samples.md
         - name: SQL-syntax
           href: https://msdn.microsoft.com/library/azure/dn782250.aspx
         - name: Facit för SQL-grammatik
-          href: ../documentdb/documentdb-sql-query-cheat-sheet.md
+          href: documentdb-sql-query-cheat-sheet.md
       - name: Resurser
         items:
         - name: Stack Overflow
-          href: http://stackoverflow.com/questions/tagged/azure-documentdb
+          href: http://stackoverflow.com/questions/tagged/azure-cosmosdb
         - name: Videoklipp
-          href: https://azure.microsoft.com/documentation/videos/index/?services=documentdb
+          href: https://azure.microsoft.com/documentation/videos/index/?services=cosmos-db
         - name: Tjänstuppdateringar
-          href: https://azure.microsoft.com/updates/?product=documentdb
+          href: https://azure.microsoft.com/updates/?product=cosmos-db
         - name: Community-portal
-          href: ../documentdb/documentdb-community.md
+          href: community.md
         - name: Blad om schemaoberoende indexering
           href: http://www.vldb.org/pvldb/vol8/p1668-shukla.pdf
         - name: 'Dra tillbaka S1, S2, S3'
-          href: ../documentdb/documentdb-performance-levels.md
+          href: performance-levels.md
     - name: MongoDB-API
       items:
       - name: Anslut till MongoDB-kontot
-        href: ../documentdb/documentdb-connect-mongodb-account.md
+        href: connect-mongodb-account.md
       - name: Använda MongoChef
-        href: ../documentdb/documentdb-mongodb-mongochef.md
+        href: mongodb-mongochef.md
       - name: Använda Robomongo
-        href: ../documentdb/documentdb-mongodb-robomongo.md
+        href: mongodb-robomongo.md
       - name: Självstudier
         items:
         - name: Node.js-konsolapp
-          href: ../documentdb/documentdb-mongodb-samples.md
+          href: mongodb-samples.md
     - name: Graph API
       items:
       - name: Gremlin-support
@@ -221,57 +227,49 @@
       - name: Table Storage
         href: https://docs.microsoft.com/rest/api/storageservices/fileservices/Table-Service-Concepts
     - name: Ändringsfeed
-      href: ../documentdb/documentdb-change-feed.md
+      href: change-feed.md
     - name: Geospatial
-      href: ../documentdb/documentdb-geospatial.md
+      href: geospatial.md
     - name: Indexering
-      href: ../documentdb/documentdb-indexing-policies.md
+      href: indexing-policies.md
   - name: Hantera
     items:
     - name: Kostnadseffektiva läsningar och skrivningar
-      href: ../documentdb/documentdb-key-value-store-cost.md
+      href: key-value-store-cost.md
     - name: Få data att upphöra att gälla automatiskt
-      href: ../documentdb/documentdb-time-to-live.md
+      href: time-to-live.md
     - name: Säkerhetskopiera och återställa
-      href: ../documentdb/documentdb-online-backup-and-restore.md
+      href: online-backup-and-restore.md
     - name: Regional redundans
-      href: ../documentdb/documentdb-regional-failovers.md
+      href: regional-failover.md
     - name: Ange dataflöde
-      href: ../documentdb/documentdb-set-throughput.md
+      href: set-throughput.md
     - name: Övervaka serviceavtal
-      href: ../documentdb/documentdb-monitor-accounts.md
+      href: monitor-accounts.md
     - name: Hantera nycklar och konsekvens
-      href: ../documentdb/documentdb-manage-account.md
-    - name: Automation
-      items:
-      - name: 'Azure CLI 1.0: Skapa ett konto'
-        href: ../documentdb/documentdb-automation-resource-manager-cli-nodejs.md
-      - name: 'Azure CLI 1.0: Lägg till eller ta bort regioner'
-        href: ../documentdb/documentdb-automation-region-management.md
-      - name: Azure PowerShell
-        href: ../documentdb/documentdb-manage-account-with-powershell.md
+      href: manage-account.md
     - name: Säkerhet
       items:
       - name: Vilande kryptering
-        href: ../documentdb/documentdb-nosql-database-encryption-at-rest.md
+        href: database-encryption-at-rest.md
       - name: Brandväggssupport
-        href: ../documentdb/documentdb-firewall-support.md
+        href: firewall-support.md
       - name: Skydda åtkomst till data
-        href: ../documentdb/documentdb-secure-access-to-data.md
+        href: secure-access-to-data.md
   - name: Integrera
     items:
     - name: Anslut till Spark
-      href: ../documentdb/documentdb-spark-connector.md
+      href: spark-connector.md
     - name: Anslut till Spark GraphX
       href: spark-connector-graph.md      
     - name: Distribuera en webbplats med Azure App Service
-      href: ../documentdb/documentdb-create-documentdb-website.md
+      href: create-website.md
     - name: Programloggning med Logic Apps
       href: ../logic-apps/logic-apps-scenario-error-and-exception-handling.md
     - name: Bind till Azure Functions
       href: ../azure-functions/functions-bindings-documentdb.md
     - name: Analysera data med Hadoop
-      href: ../documentdb/documentdb-run-hadoop-with-hdinsight.md
+      href: run-hadoop-with-hdinsight.md
     - name: Integrera med Azure Search
       href: ../search/search-howto-index-documentdb.md
     - name: Flytta data med Azure Data Factory
@@ -279,27 +277,27 @@
     - name: Analysera realtidsdata med Azure Stream Analytics
       href: ../stream-analytics/stream-analytics-define-outputs.md#documentdb
     - name: Hämta ändrad HL7 FHIR-post med Logic Apps
-      href: ../documentdb/documentdb-change-feed-hl7-fhir-logic-apps.md
+      href: change-feed-hl7-fhir-logic-apps.md
     - name: Bearbeta sensordata i realtid
       href: ../hdinsight/hdinsight-storm-iot-eventhub-documentdb.md
     - name: Visualisera din information med Power BI
-      href: ../documentdb/documentdb-powerbi-visualize.md
+      href: powerbi-visualize.md
     - name: Utnyttja ODBC-drivrutinen för datavisualisering
-      href: ../documentdb/documentdb-nosql-odbc-driver.md
+      href: odbc-driver.md
 - name: Referens
   items:
   - name: 'DocumentDB-API:er'
     items:
     - name: Java
-      href: ../documentdb/documentdb-sdk-java.md
+      href: documentdb-sdk-java.md
     - name: .NET
-      href: ../documentdb/documentdb-sdk-dotnet.md
+      href: documentdb-sdk-dotnet.md
     - name: .NET Core
-      href: ../documentdb/documentdb-sdk-dotnet-core.md
+      href: documentdb-sdk-dotnet-core.md
     - name: Node.js
-      href: ../documentdb/documentdb-sdk-node.md
+      href: documentdb-sdk-node.md
     - name: Python
-      href: ../documentdb/documentdb-sdk-python.md
+      href: documentdb-sdk-python.md
     - name: REST
       href: /rest/api/documentdb/
     - name: REST-resursprovider
@@ -317,8 +315,8 @@
   - name: Prissättning
     href: https://azure.microsoft.com/pricing/details/documentdb/
   - name: VANLIGA FRÅGOR OCH SVAR
-    href: ../documentdb/documentdb-faq.md
+    href: faq.md
   - name: Stack Overflow
-    href: http://stackoverflow.com/questions/tagged/azure-cosmos-db
+    href: http://stackoverflow.com/questions/tagged/azure-cosmosdb
   - name: Förklaring av datakonsekvens med hjälp av baseboll
     href: http://research.microsoft.com/apps/pubs/default.aspx?id=206913
